# Lab_2_stack_realization_

./: CMakeLists.txt  Functions.cpp  Functions.h  Mode.cpp  Mode.h  README.md  main.cpp
Files/: Array benchmark data.txt  Comparison benchmark.txt  Demo default parameters.txt  List benchmark data.txt  Vector benchmark data.txt
Stack structures/: Array_stack.cpp  Array_stack.h  ListNode.cpp  ListNode.h  List_stack.cpp  List_stack.h  Point.cpp  Point.h  Vector_stack.cpp  Vector_stack.h
